# Music_FFT

./: CMakeLists.txt  create_makelist.py  partitions_singleapp_large.csv  sdkconfig
components/espressif__esp_lcd_touch_gt911/: .component_hash
components/espressif__esp_lcd_touch_gt911/include/: esp_lcd_touch_gt911.h
components/lvgl/: lv_conf.h
components/lvgl/demos/music/: lv_demo_music.c
components/lvgl/examples/widgets/chart/: lv_example_chart_4.c  lv_example_chart_6.c
components/lvgl/examples/widgets/table/: lv_example_table_2.c
components/lvgl/src/: lv_conf_internal.h
components/lvgl/src/extra/libs/: lv_libs.h
components/lvgl/src/extra/libs/fsdrv/: lv_fs_fatfs.c
components/lvgl/src/font/: lv_font.h
components/lvgl/src/hal/: lv_hal_disp.c
main/: CMakeLists.txt  idf_component.yml  lvgl_gui.c  lvgl_gui.h  main.c  tp_interrupt.c  ui.h  ui_events.h  ui_helpers.h  upload_script.html
main/FILE_SERVER/: file_server.c
main/UI/: ui.c  ui_Screen1.c  ui_helpers.c  ui_img_happy_santa_png.c
main/WIFI/: smartconfig.c  sntp.c
main/WS2812/: led_strip.c  led_strip_encoder.c
main/freetype/: lv_freetype.c  lv_freetype.h
